# bulk-diffusion

./: .gitignore  Cargo.toml
app_data/example prompt/: metaprompt.mp
html/: index.html
src/: main.rs  metaprompt.rs
