[package]
name = "sd-bulk-webui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-std = "1"
axum = "0.6"
base64 = "0.21"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
no-comment = "0.0.3"
png = "0.17"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["full"] }
uuid = "1"
